--- a/task2.ipynb
+++ b/task2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,16 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7b2641780050>"
+       "<matplotlib.colorbar.Colorbar at 0x73ff894c2720>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        " <BarContainer object of 10 artists>)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,16 +148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7b26416a5ca0>"
+       "<matplotlib.image.AxesImage at 0x73ff88c309e0>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -194,43 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(768, 1024)"
+       "<matplotlib.colorbar.Colorbar at 0x73ff88b4db20>"
       ]
      },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "img.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**<a id=\"#\">Task 2.3.2 (b).</a>** Enter your solution below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x7b262c05a600>"
-      ]
-     },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -246,7 +219,7 @@
     }
    ],
    "source": [
-    "img_copy = img.copy()\n",
+    "img_copy1 = img.copy()\n",
     "for i in range(img.shape[0]):  \n",
     "    for j in range(img.shape[1]):\n",
     "        pixel = img[i, j]\n",
@@ -256,8 +229,24 @@
     "        if pixel > T2:\n",
     "            img_copy[i,j] = T2\n",
     "plt.imshow(img_copy)\n",
-    "plt.colorbar()\n",
-    "         "
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<a id=\"#\">Task 2.3.2 (b).</a>** Enter your solution below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_copy2 = img.copy()\n",
+    " for [i, j] in numpy.nindex(img.shape)        "
    ]
   },
   {
