--- a/task1.4.ipynb
+++ b/task1.4.ipynb
@@ -38,31 +38,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n"
+      "the result is i=5\n",
+      "the result is i=6\n",
+      "the result is i=7\n",
+      "the result is i=8\n",
+      "the result is i=9\n",
+      "the result is i=10\n",
+      "the result is i=11\n",
+      "the result is i=12\n",
+      "the result is i=13\n",
+      "the result is i=14\n",
+      "the result is i=15\n"
      ]
     }
    ],
    "source": [
     "i = 5\n",
     "while i < 16:  \n",
-    "    print (i)  \n",
+    "    print (\"the result is i=\" + str(i))  \n",
     "    i = i + 1\n"
    ]
   },
@@ -90,40 +90,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "4\n",
-      "9\n",
-      "16\n",
-      "25\n",
-      "36\n",
-      "49\n",
-      "64\n",
-      "81\n",
-      "100\n",
-      "121\n",
-      "144\n",
-      "169\n",
-      "196\n",
-      "225\n",
-      "256\n",
-      "289\n",
-      "324\n",
-      "361\n",
-      "400\n"
+      "1 -> 1\n",
+      "2 -> 4\n",
+      "3 -> 9\n",
+      "4 -> 16\n",
+      "5 -> 25\n",
+      "6 -> 36\n",
+      "7 -> 49\n",
+      "8 -> 64\n",
+      "9 -> 81\n",
+      "10 -> 100\n",
+      "11 -> 121\n",
+      "12 -> 144\n",
+      "13 -> 169\n",
+      "14 -> 196\n",
+      "15 -> 225\n",
+      "16 -> 256\n",
+      "17 -> 289\n",
+      "18 -> 324\n",
+      "19 -> 361\n",
+      "20 -> 400\n"
      ]
     }
    ],
    "source": [
     "i = 1\n",
     "while i < 21:  \n",
-    "    print (i**2)  \n",
+    "    print (str(i) + \" \" + \"->\" + \" \" + str(i**2))  \n",
     "    i = i + 1"
    ]
   },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +165,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 4):\n",
+    "    print(i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -187,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -199,10 +219,10 @@
     }
    ],
    "source": [
-    "numbers = range(1, 101)  \n",
-    "total = sum(numbers)  \n",
-    "print(total)\n",
-    " \n"
+    "total = 0\n",
+    "for i in range(1,101):  \n",
+    "    total=total + i\n",
+    "print(total)\n"
    ]
   },
   {
@@ -223,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -246,8 +266,9 @@
    "source": [
     "for i in range(1, 11):  \n",
     "    for j in range(1, 11):  \n",
-    "        print(i * j, end= \"\")\n",
-    "    print()"
+    "        print(i * j, end=\"\")\n",
+    "    print()\n",
+    "    "
    ]
   },
   {
@@ -275,7 +296,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01 02 03 04 05 06 07 08 09 10 \n",
+      "02 04 06 08 10 12 14 16 18 20 \n",
+      "03 06 09 12 15 18 21 24 27 30 \n",
+      "04 08 12 16 20 24 28 32 36 40 \n",
+      "05 10 15 20 25 30 35 40 45 50 \n",
+      "06 12 18 24 30 36 42 48 54 60 \n",
+      "07 14 21 28 35 42 49 56 63 70 \n",
+      "08 16 24 32 40 48 56 64 72 80 \n",
+      "09 18 27 36 45 54 63 72 81 90 \n",
+      "10 20 30 40 50 60 70 80 90 100 \n"
+     ]
+    }
+   ],
+   "source": [
+    " for i in range (1,11):\n",
+    "    for j in range (1,11):\n",
+    "        val= i * j\n",
+    "        if val < 10:\n",
+    "            print(\"0\"+ str(val), end=\" \")\n",
+    "        else:\n",
+    "            print(str(val), end=\" \")\n",
+    "    print()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
