--- a/task4.ipynb
+++ b/task4.ipynb
@@ -12,7 +12,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplo"
+   ]
   },
   {
    "cell_type": "markdown",
