--- a/task3.ipynb
+++ b/task3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x71d761988fe0>"
+       "<matplotlib.colorbar.Colorbar at 0x77dec13e1130>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -70,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x71d760124b90>"
+       "<matplotlib.image.AxesImage at 0x77dec0ed5ac0>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -95,7 +95,6 @@
     }
    ],
    "source": [
-    "\n",
     "def meanfilter(img_in, size):\n",
     "    result = numpy.zeros(img_in.shape)\n",
     "    n = (size - 1) // 2\n",
@@ -112,9 +111,9 @@
     "            result[p] = neighborhood_sum / Anzahl\n",
     "    return result\n",
     "\n",
+    "img_1=img_in.copy()\n",
     "img_mean = meanfilter(img_1, size=5)\n",
-    "img_1 = img_in.copy()\n",
-    "plt.imshow(img_mean)"
+    "plt.imshow(img_mean)\n"
    ]
   },
   {
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x71d758b23f50>"
+       "<matplotlib.image.AxesImage at 0x77dec1379940>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
